2014-01-24  6.9.0-5 Dirk Lemstra <dirk@lem.....org>
  * Fixed iccColorProfile() in Magick++ (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26910).

2014-01-23  6.9.0-5 Glenn Randers-Pehrson <glennrp@image...>
  * Check lengths of certain MNG chunks before reading them.

2014-01-18  6.9.0-5 Cristy  <quetzlzacatenango@image...>
  * Remove possible resource memory leak in a multi-threaded program (bug
    report and patch from David Chapman <d...@acm.org>.
  * Small optimization to pixel cache.
  * More image sanity checks.

2014-01-16  6.9.0-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-4, SVN revision 17697.

2014-01-07  6.9.0-4 Cristy  <quetzlzacatenango@image...>
  * Additional coder sanity checks (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26842,
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26682).

2014-01-05  6.9.0-4 Dirk Lemstra <dirk@lem.....org>
  * Report Ghostscript version when -verbose is used and when an exception
    is raised.
  * Fixed invalid path check in MagickCoreGenesis under Windows and disabled
    ProvideDllMain by default (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=118875).

2014-01-01  6.9.0-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-3, SVN revision 17537.

2015-01-01  6.9.0-3 Cristy  <quetzlzacatenango@image...>
  * ImageMagick builds when HDRI is enabled (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26803).

2014-12-31  6.9.0-3 Glenn Randers-Pehrson <glennrp@image...>
  * Don't read beyond the end of a tEXt keyword when checking for Raw profile.

2014-12-27  6.9.0-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-2, SVN revision 17468.

2014-12-14  6.9.0-1 Dirk Lemstra <dirk@snakeware...>
  * Added support for reading EXR files to the Windows distribution.
  * Fixed enabling alpha in 32-bit BMP files (reference