@@ -4,6 +4,7 @@
 
 2014-01-23  6.9.0-5 Glenn Randers-Pehrson <glennrp@image...>
   * Check lengths of certain MNG chunks before reading them.
+  * Check status wherever a function returns it.
 
 2014-01-18  6.9.0-5 Cristy  <quetzlzacatenango@image...>
   * Remove possible resource memory leak in a multi-threaded program (bug
